# diversity-engine

./: Dockerfile  README.md  pyproject.toml
src/: pytest.ini
src/api/: main.py
src/app/: main.py
src/core/: industry_insights.py  s3_utilities.py  wasabi.py
src/services/: run_scorecards.py
src/tests/: test_one_scorecard.py
