[tool.poetry]
name = "diversity-engine"
version = "0.0.1"
description = ""
authors = ["Andy Spezzatti <andyspezzatti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.68"
pytest = "^7.1.3"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
